--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title> Formulario Login </title>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width-device-width, user-scalable=no,
-  initial-scale=1, maximum-scale=1, minimum-scale=1">
+  initial-scale=1, maximum-scale=1, minimum-scale=1"/>
     <link rel="stylesheet" type="text/css" href="" media="screen"/>
 <style type="text/css">
 form{
@@ -35,8 +35,7 @@ input[type="submit"]{
   color: brown;
   opacity: 8.8;
   cursor: pointer;
-  border-radius: 20px;
-  margin-bottom: 0;
+
 
 }
 input[type="submit"]:hover{
@@ -45,6 +44,14 @@ opacity: 1;
 
 input[type="submit"]:active{
  transform: scale(0.95);
+}
+select{
+  background: linear-gradient(#FFDA63, #FFB940);
+  border: 5;
+  color: black;
+  opacity: 10;
+  border-radius: 5px;
+  
 }
 @media (max-width:768px) {
   form{
@@ -62,14 +69,18 @@ input[type="submit"]:active{
 </style>
 
   </head>
-<body>
+  <body>
 
-  <form action="validar.php" >
-<h2> login</h2>
-<input type="text" placeholder="&#128272; Usuario" name="usuario" >
-<input type="password" placeholder="&#128272; Contraseña" name="contraseña"  >
-<input type="submit" value="Ingresar">
-  </form>
+    <form action="validar.php" method="post">
+      <h2> Login</h2>
+      <input type="text" name="usuario" placeholder="&#128272; Usuario"/>
+      <input type="password" name="contrasenia" placeholder="&#128272; Contraseña"/>
+      <label>Tipo de usuario: </br></label>
+      <select name="tipo">
+        <option>Administrador</option>
+        <option>Vendedor</option>
+      <input type="submit" value="Ingresar"/>
+    </form>
 
-</body>
+  </body>
 </html>
