--- a/login.html
+++ b/login.html
@@ -82,8 +82,8 @@ select{
 
     <form action="validar.php" method="post">
       <h2> Login</h2>
-      <input type="text" name="usuario" placeholder="&#128272YO VINI ; Usuario"/>
-      <input type="password" name="contrasenia" placeholder="&#128272 YO VINI; Contraseña"/>
+      <input type="text" name="usuario" placeholder="&#128272  Usuario"/>
+      <input type="password" name="contrasenia" placeholder="&#128272  Contraseña"/>
       <label>Tipo de usuario:</label>
       <select name="tipo">
         <option>Administrador</option>
