--- a/principalVendedor.html
+++ b/principalVendedor.html
@@ -57,7 +57,7 @@ display: block;
 <body>
 <div id = "header">
 <ul class="nav">
-<li><a href="">Empleados</a>
+<li><a href="">EMPLEADOS</a>
   <ul>
     <li><a href="">Pestaña</a>
       <ul>
