--- a/principal.html
+++ b/principal.html
@@ -218,7 +218,7 @@
                     
                     <li><a href=""> GUIA DE ENTREGA  </a>
                     <ul>
-                        <li  ><a href=""> Registrar Guia</a>  </li>
+                        <li  ><a href=""> Registrar Guia de Entrega</a>  </li>
                             <li  ><a href="">  Buscar </a>  </li>
                         
                         </ul> 
