--- a/principal.html
+++ b/principal.html
@@ -187,7 +187,7 @@
                 <ul>
                     <li class="submenu"><a href=""> VENDEDORES   </a>
                         <ul>
-                        <li  ><a href="registradorVendedor.html"> Registrar Vendedor
+                        <li  ><a href="registrarVendedor.html"> Registrar Vendedor
                     </a>  </li>
                             <li  ><a href="">  Buscar </a>  </li>
                              
