registrar vendedor y clientes con usuario, falta validaciones

--- a/registrarCliente.html
+++ b/registrarCliente.html
@@ -12,17 +12,18 @@
 
   <div class="container">
     <div class="form__top">
-      <h2>Registrar<span>Vendedor</span></h2>
+      <h2>Registrar<span>Cliente</span></h2>
     </div>    
-    <form class="form__reg" action="registrarVendedor.php" method="post">
+    <form class="form__reg" action="registrarCliente.php" method="post">
               <input class="input" type="text" placeholder="&#128100;  Primer Nombre" name="nombre1" required autofocus>
               <input class="input" type="text" placeholder="&#128100;  Segundo Nombre" name="nombre2"  >
               <input class="input" type="text" placeholder="&#128100;  Primer Apellido" name="apellido1" required autofocus >
               <input class="input" type="text" placeholder="&#128100;  Segundo Apellido" name="apellido2"  >
-              <input class="input" type="text" placeholder="&#x1F4B3;  Cedula" name="cedulaVendedor"  >
-              <input class="input" type="text" placeholder="&#x1F4B3;  Pasaporte" name="pasaporteVendedor"  >
-              <input class="input" type="text" placeholder="&#128222;  Telefono" name="telefonoVendedor" >
-              <input class="input" type="text" placeholder="&#x0023;  Codigo" name="codVendedor" >  
+              <input class="input" type="text" placeholder="&#x1F4B3;  Cedula" name="cedulaCliente"  >
+              <input class="input" type="text" placeholder="&#x1F4B3;  Pasaporte" name="pasaporteCliente"  >
+              <input class="input" type="text" placeholder="&#x1F4B3;  RUC" name="RUC"  >
+              <input class="input" type="text" placeholder="&#128222;  Telefono" name="telefonoCliente" >
+              <input class="input" type="text" placeholder="&#x0023;  Codigo" name="codCliente" >  
               <input class="input" type="password" placeholder="&#x0023;  Password" name="pass" required autofocus>  
 
               <div class="btn__form">
