--- a/principalAdmin.html
+++ b/principalAdmin.html
@@ -173,8 +173,8 @@
                     <li><a href=""> CLIENTES  </a>
                         <ul>
 
-                        <li  ><a href="">  Registrar Cliente </a>  </li>
-                            <li  ><a href="">  Buscar </a>  </li>
+                        <li  ><a href="">  REGISTRAR CLIENTE </a>  </li>
+                            <li  ><a href="">  BUSCAR </a>  </li>
                         
                                 
                 </ul>   
