--- a/principalAdmin.html
+++ b/principalAdmin.html
@@ -165,7 +165,7 @@
                     <li class="submenu"><a href=""> VENDEDORES   </a>
                         <ul>
                         <li  ><a href="registrarVendedor.html"> Registrar Vendedor</a>  </li>
-                        <li  ><a href="">  Buscar </a>  </li>
+                        <li  ><a href="consultarVendedor.html">  Buscar </a>  </li>
                         </ul>             
      
                     </li>
