--- a/registrarGuia.html
+++ b/registrarGuia.html
@@ -15,22 +15,19 @@
     <div class="form__top"> 
       <h2>Registrar<span> Guia de Entrega </span></h2> 
     </div> 
-    <form class="form__reg" action="registrarVendedor.php" method="post"> 
+    <form class="form__reg" action="registrarGuia.php" method="post"> 
         <input class="input" type="text" placeholder="&#x0023;  Nº Guia" name="id_guia" required autofocus> 
         <input class="input" type="date" placeholder="&#128100;  Fecha de Entrega" name="fechaEntrega" required autofocus > 
         <input class="input" type="text" placeholder="&#128100;  Distribuidor" name="distribuidor" required autofocus > 
-        <input class="input" type="text" placeholder="&#128100;  Vendedor" name="facilitador" required autofocus > 
-        <input class="input" type="text" placeholder="&#128100;  Facilitador" name="facilitador" required autofocus > 
- 
-        <input class="input" type="text" placeholder="&#x0023;  Nº Cliente" name="id_cliente" required autofocus> 
-        <input class="input" type="text" placeholder="&#x1F4B3;  Cedula o RUC" name="cedulaVendedor" required autofocus > 
+        <input class="input" type="text" placeholder="&#128100;  Vendedor" name="vendedor" required autofocus > 
+        <input class="input" type="text" placeholder="&#x0023;  Nº Cliente" name="id_cli" required autofocus> 
         <input class="input" type="text" placeholder="&#128100;  Nombre o Razon Social" name="NombreCliente" required autofocus > 
         <input class="input" type="text" placeholder="&#128222;  Telefono" name="telefonoVendedor" required> 
  
         <button onclick = "findMe()"> Mostrar Ubicación </button> 
             <div id="map"></div> 
               <script>src = "https://maps.googleapis/maps/api/js?key=AIzaSyCt3c7gUKlnTyTE9VaMNzJK4MfrDnUnzBQ"</script> 
-              <script> 
+                <script> 
                 function findMe(){ 
                     var outpu = document.getElementById('map'); 
                     if (navegator.geolocation){ 
@@ -43,7 +40,7 @@
                     var longitude = posicion.cords.longitude; 
                     ouput.innerHTML = "<p>Latitud "+latitude+" <br> Longitud "+longitude+" </p>"; 
                     var imgURL = "https://maps.googleapis.com/maps/api/staticmap?center="+latitude+","+longitude+"&size=600x300&markers=color:red%7C"+latitude+","+longitude+"&key=AIzaSyCt3c7gUKlnTyTE9VaMNzJK4MfrDnUnzBQ "; 
-           output.innerHTML ="<img src='"+imgURL+"'>"; 
+                      output.innerHTML ="<img src='"+imgURL+"'>"; 
  
                   } 
                   function error(){ 
@@ -64,7 +61,7 @@
         <TR> 
  
             <FONT COLOR="gray" SIZE=5>Exhibidor: </FONT><br> 
-            <SELECT NAME="exhibidor"class="input"> 
+            <SELECT NAME="exhibidor" class="input"> 
             <OPTION><FONT COLOR="gray">2BP </FONT> 
             <OPTION><FONT COLOR="gray">4BP </FONT> 
             <OPTION><FONT COLOR="gray">5BP </FONT> 
@@ -75,14 +72,10 @@
             <br> 
        <TR> 
  
-            <textarea class="input" placeholder="&#128172; Comentario:" rows="5" id="comment"></textarea> 
+            <textarea class="input" placeholder="&#128172; Comentario:" rows="5" name="comentario" ></textarea> 
  
               <div class="btn__form"> 
                 <input class="btn__submit" type="submit" value="REGISTRAR"> 
                 <input class="btn__reset" type="reset" value="LIMPIAR"> 
               </div> 
     </form> 
-4 file changes in working directory
-View changes
-commit:0fdf4c
-GuiaKathy
