--- a/registrarVendedor.html
+++ b/registrarVendedor.html
@@ -15,15 +15,15 @@
       <h2>Registrar<span>Vendedor</span></h2>
     </div>    
     <form class="form__reg" action="registrarVendedor.php" method="post">
-              <input class="input" type="text" placeholder="&#128100;  Primer Nombre" name="nombre1" required autofocus>
-              <input class="input" type="text" placeholder="&#128100;  Segundo Nombre" name="nombre2"  >
-              <input class="input" type="text" placeholder="&#128100;  Primer Apellido" name="apellido1" required autofocus >
-              <input class="input" type="text" placeholder="&#128100;  Segundo Apellido" name="apellido2"  >
-              <input class="input" type="text" placeholder="&#x1F4B3;  Cedula" name="cedulaVendedor"  >
+              <input class="input" maxlength="20" type="text" placeholder="&#128100;  Primer Nombre" name="nombre1" required autofocus>
+              <input class="input" maxlength="20" type="text" placeholder="&#128100;  Segundo Nombre" name="nombre2"  >
+              <input class="input" maxlength="20" type="text" placeholder="&#128100;  Primer Apellido" name="apellido1" required autofocus >
+              <input class="input" maxlength="20" type="text" placeholder="&#128100;  Segundo Apellido" name="apellido2"  >
+              <input class="input" maxlength="10" type="text" placeholder="&#x1F4B3;  Cedula" name="cedulaVendedor"  >
               <input class="input" type="text" placeholder="&#x1F4B3;  Pasaporte" name="pasaporteVendedor"  >
-              <input class="input" type="text" placeholder="&#128222;  Telefono" name="telefonoVendedor" >
-              <input class="input" type="text" placeholder="&#x0023;  Codigo" name="codVendedor" >  
-              <input class="input" type="password" placeholder="&#x0023;  Password" name="pass" required autofocus>  
+              <input class="input" maxlength="10" type="text" placeholder="&#128222;  Telefono" name="telefonoVendedor" >
+                
+                
 
               <div class="btn__form">
                 <input class="btn__submit" type="submit" value="REGISTRAR">
