--- a/principalAdmin.html
+++ b/principalAdmin.html
@@ -178,9 +178,8 @@
                     
                     <li class="submenu"><a href=" "> EXHIBIDORES  </a>
                         <ul>
-                            <li  ><a href="principalAdmin.php"> Datos Exhibidor</a>  </li>
-                            <li  ><a href="principalAdmin.php">  Buscar </a>  </li>
-                            <li><a href="principalAdmin.php"> STOCK  </a>    
+                            <li  ><a href="registrarExhibidor.html"> Registrar Exhibidor</a>  </li>
+                            <li  ><a href="listarExhibibor.php">  Buscar </a>  </li>    
                         </ul>          
                      </li>
                     
